<resources>
    <string name="app_name">D2D Follow Corona</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_registration_person_basic_info">RegistrationPersonBasicInfo
    </string>
    <string name="registration_mobile_hint">Enter Mobile Number</string>
    <string name="registration_name_hint">Enter Name</string>
    <string name="registration_person_father_name_hint">Enter Father Name</string>
    <string name="registration_person_mother_hint">Enter Mother Name</string>
    <string name="registration_person_age_hint">Enter Age</string>
    <string name="text_view_registration_birthdate">Birthdate</string>
    <string name="button_registration_select_button">Select Birthdate</string>
    <string name="button_registration_select_sex_button">Select Gender</string>
    <string name="text_view_registration_gender">Select Gender</string>
    <string name="spinner_registration_select_sex_button">Select Gender</string>
    <string name="button_registration_complete">Done</string>
    <string name="reporter_phone_own_hint">Enter Your Phone Number</string>
    <string name="reporter_name_own_hint">Enter Your Name</string>
    <string name="reporter_info">Data Collector Info</string>
    <string name="register">Register</string>
    <string name="area_email_address">Enter Area Email Address</string>
    <string name="warning_transaction_add_entry">Please enter Amount and Description Correctly!</string>
    <string name="warning_reporter_open_phone_name_entry">Please enter Phone and Name Correctly!</string>
    <string name="warning_account_open_phone_entry">Please enter Phone Correctly!</string>
    <string name="warning_account_open_name_entry">\"Please enter Name Correctly!</string>
    <string name="warning_account_open_amount_entry">\"Please enter Amount Correctly!</string>
    <string name="warning_email_mobile_name">Enter Area, Phone and Name Correctly!</string>
    <string name="warning_account_open_email_entry">Enter Area Correctly!</string>
    <string name="d2dfc_home">D2D Follow Corona</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_famililies">Families</string>
    <string name="menu_members">Members</string>
    <string name="menu_about_us">About Us</string>
    <string name="family_attr_phone">Family Phone</string>
    <string name="family_total_members">Total Members</string>
    <string name="search">Search</string>
    <string name="choose_your_language">Choose Language</string>
    <string name="bangla">Bangla</string>
    <string name="english">English</string>
    <string name="member_attr_name">Member Name</string>
    <string name="member_attr_phone">Member Phone</string>
    <string name="member_attr_age">Member Age</string>
    <string name="nav_header_title">Phone</string>
    <string name="nav_header_subtitle">Name</string>
    <string name="error_msg">Error Message</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="chart_option1_array">
        <item>Gender</item>
        <item>Occupation</item>
        <item>Age</item>
    </string-array>
    <string-array name="chart_option2_array">
        <item>Corona Symptoms</item>
        <item>Travel Info</item>
    </string-array>
    <string-array name="bio_spinner">
        <item>@string/age</item>
        <item>@string/gender</item>
        <item>@string/occupation</item>
    </string-array>
    <string-array name="travel_days_array">
        <item>Not Recent</item>
        <item>35 days ago</item>
        <item>28 days ago</item>
        <item>21 days ago</item>
        <item>14 days ago</item>
        <item>7 days ago</item>
    </string-array>
    <string-array name="corona_symptoms_days_array">
        <item>in last 7 days</item>
        <item>in last 14 days</item>
        <item>in last 21 days</item>
        <item>Today</item>
    </string-array>
    <string name="title_activity_member_travel_and_heath_history">MemberTravelAndHeathHistory
    </string>
    <string name="travel_history">Travel History</string>
    <string name="dhaka">Dhaka</string>
    <string name="narayanganj">Narayanganj</string>
    <string name="out_bangladesh">Out of Bangladesh</string>
    <string name="out_sarail">Out of Sarail</string>
    <string name="out_brahmanbaria">Out of Brahmanbaria</string>
    <string name="sylhet">Sylhet</string>
    <string name="common_health_issues">Common Health Issues</string>
    <string name="recorded">Recorded</string>
    <string name="diabetes">Diabetes</string>
    <string name="now">Now</string>
    <string name="cardiovascular_diseases">Cardiovascular D</string>
    <string name="hypertension">Hypertension</string>
    <string name="stroke">Stroke</string>
    <string name="cancer">Cancer</string>
    <string name="tuberculosis">Tuberculosis</string>
    <string name="tetanus">Tetanus</string>
    <string name="other_disease_desc_hint">Other Disease Desription</string>
    <string name="common_respiratory_issues">Common Respiratory Diseases</string>
    <string name="common_respiratory_issues_related_bad_habits">Common Respiratory Related Bad Habits</string>
    <string name="asthama">Asthama</string>
    <string name="chronic_bronchitis">Chronic Bronchitis</string>
    <string name="lung_cancer">Lung Cancer</string>
    <string name="pneumonia">Pneumonia</string>
    <string name="smoking">Smoking</string>
    <string name="betel_leaf">Betel Leaf</string>
    <string name="hooka">Hooka</string>
    <string name="corona_symptoms">Corona Symptoms</string>
    <string name="corona_symptoms_fever">Fever</string>
    <string name="corona_symptoms_dry_cough">Dry Cough</string>
    <string name="corona_symptoms_fatigue">Fatigue</string>
    <string name="corona_symptoms_mucus_cough">Mucus Cough</string>
    <string name="corona_symptoms_shortness_of_breath">Breathing Problem</string>
    <string name="corona_symptoms_aches_and_pain">Aches and Pain</string>
    <string name="corona_symptoms_sore_throat">Sore Throat</string>
    <string name="corona_symptoms_nausea">Nausea</string>
    <string name="corona_symptoms_chillis">Chillis</string>
    <string name="corona_symptoms_nasal_congestion">Nasal Congestion</string>
    <string name="corona_symptoms_diarrhea">Diarrhea</string>
    <string name="yes">Yes</string>
    <string name="person_trace">Person Trace</string>
    <string name="person_trace_out_of_area">Out of Area</string>
    <string name="person_trace_out_for_work">Out for Work</string>
    <string name="person_trace_gone_to_shop">Gone to Shop</string>
    <string name="person_trace_gone_to_bazar">Gone to Bazar</string>
    <string name="menu_email_data">Send Email Data</string>
    <string name="search_hint">Search Here</string>
    <string name="menu_home">Home</string>
    <string name="family_list">Families</string>
    <string name="person_list">Members</string>
    <string name="family_attr_age">Age</string>
    <string name="about_dev_info">About Us</string>
    <string name="family_add_phone_hint">Enter Family Phone</string>
    <string name="family_add_members_hint">Enter Total Members</string>
    <string name="done">Done</string>
    <string name="close">Close</string>
    <string name="warning_family_add_phone_members_entry">Enter Phone and Number of Members Correctly!</string>
    <string name="page_family_add">Add Family</string>
    <string name="text_view_registration_occupation">Enter Occupation</string>
    <string name="registration_person_occupation_hint">Enter Person Occupation</string>
    <string name="page_person_add">Add Person</string>
    <string name="text_view_family_phone">Family Phone</string>
    <string name="bad_habits_others_hint">Other Bad Habits</string>
    <string name="respiratory_issues_others_hint">Other Respiratory Issues</string>
    <string name="family_phone_exists">Family Phone Number Exists</string>
    <string name="unknown_error">Unknown Error!</string>
    <string name="warning_person_add_mandatory_entry">Mobile, Name, Gender and Age are Mandatory Entry!</string>
    <string name="family_phone_name_error">Family Mobile and Name Must Be Different!</string>
    <string name="from_label">From</string>
    <string name="from_value">Value</string>
    <string name="to_label">To</string>
    <string name="to_value">Value</string>
    <string name="menu_reporting_list">Reporting</string>
    <string name="page_exportings">Export History</string>
    <string name="member_attr_gender">Gender</string>
    <string name="corona_symptoms_other">Other Symptoms</string>
    <string name="person_trace_other">Other Area</string>
    <string name="person_attr_phone">Person Phone</string>
    <string name="person_attr_age">Age</string>
    <string name="person_attr_name">Name</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="age">Age</string>
    <string name="occupation">Occupation</string>
    <string name="gender">Gender</string>
    <string name="family_dashboard">Family Dashboard</string>
    <string name="follow_up_date">Follow Up Date</string>
    <string name="person_selected">Person(s) Selected</string>
    <string name="generate">Generate</string>
    <string name="same_time">Same Time</string>
    <string name="time_interval_constraint">To Time should be greater than Frome Time</string>
    <string name="files_creation_successful">Files Created Successfully on Folder \'d2dfc\'!</string>
    <string name="files_creation_error">Files are not created successfully!</string>
    <string name="daily_corona_followup">Daily Followup</string>
    <string name="daily_person_contact">Contacts Trace</string>
    <string name="history">History</string>
    <string name="info">Info</string>
    <string name="menu_export_data">Export Data</string>
    <string name="area_name_hint">Enter name of the area</string>
    <string name="area_name">Area Name</string>
    <string name="member_creation_family_constraint">Select Family First!</string>
    <string name="family_add_members_guardian_hint">Enter Family Guardian Name</string>
    <string name="warning_family_add_constraint">Name, Phone and Members Number are mandatory</string>
    <string name="card_member_details">Member Details</string>
    <string name="card_member_bio">Bio</string>
    <string name="card_member_corona_related_history">Corona Related History</string>
    <string name="card_member_health">Health History</string>
    <string name="card_member_travel">Travel History</string>
    <string name="card_member_repitory">Respiratory Issues</string>
    <string name="member_info">Member Info</string>
    <string name="no_persons_selected">No Person Selected</string>
    <string name="from_label_data_entry">Data Entry Time From</string>
    <string name="to_label_data_entry">Data Entry Time To</string>
    <string name="data_export_time_lable">Export Time</string>
    <string name="export_data">Export Data</string>
    <string name="export">Export</string>
    <string name="acknowldgements">Acknowledgements</string>
    <string name="sheikh_digital_lab">Sheikh Rasel Digital Lab, Shahbazpur M.L. High School</string>
    <string name="ashiq">Ashiquzzaman Ashiq, My Intern Supervisor, MCC Limited</string>
    <string name="iit_nstu">IIT, DU and IIT, NSTU</string>
    <string name="my_family">Beloved Family</string>
</resources>