<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_member_view"
    android:layout_gravity="center"
    android:padding="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="2dp"
    card_view:cardCornerRadius="@dimen/card_member_corner_radius">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include
            layout="@layout/horizontal_line"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/acknowldgements"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ashiq"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iit_nstu"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sheikh_digital_lab"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_family"/>
        <include
            layout="@layout/horizontal_line"
            />
    </LinearLayout>
</androidx.cardview.widget.CardView>
