<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/coronana_symptoms_group">
        <TextView
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/corona_symptoms"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:id="@+id/corona_symptoms_fever"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/corona_symptoms_fever"/>
            <Spinner
                android:id="@+id/corona_symptoms_fever_fever"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:id="@+id/corona_symptoms_dry_cough"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/corona_symptoms_dry_cough"/>
            <Spinner
                android:id="@+id/corona_symptoms_fever_dry_cough"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:id="@+id/corona_symptoms_fatigue"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/corona_symptoms_fatigue"/>
            <Spinner
                android:id="@+id/corona_symptoms_fever_fatigue"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:id="@+id/corona_symptoms_mucus_cough"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/corona_symptoms_mucus_cough"/>
            <Spinner
                android:id="@+id/spinner_corona_symptoms_mucus_cough"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:id="@+id/corona_symptoms_shortness_of_breath"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/corona_symptoms_shortness_of_breath"/>
            <Spinner
                android:id="@+id/spinner_corona_symptoms_shortness_of_breath"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:id="@+id/corona_symptoms_aches_and_pain"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/corona_symptoms_aches_and_pain"/>
            <Spinner
                android:id="@+id/spinner_corona_symptoms_aches_and_pain"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:id="@+id/corona_symptoms_sore_throat"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/corona_symptoms_sore_throat"/>
            <Spinner
                android:id="@+id/spinner_corona_symptoms_sore_throat"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:id="@+id/corona_symptoms_chillis"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/corona_symptoms_chillis"/>
            <Spinner
                android:id="@+id/spinner_corona_symptoms_fever_chillis"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:id="@+id/corona_symptoms_nausea"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/corona_symptoms_nausea"/>
            <Spinner
                android:id="@+id/spinner_corona_symptoms_fever_nausea"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:id="@+id/corona_symptoms_nasal_congestion"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/corona_symptoms_nasal_congestion"/>
            <Spinner
                android:id="@+id/spinner_corona_symptoms_nasal_congestion"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:id="@+id/corona_symptoms_diarrhea"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/corona_symptoms_diarrhea"/>
            <Spinner
                android:id="@+id/spinnner_corona_symptoms_diarrhea"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>